# SML-Agent-Protocol

./: .gitignore  README.md  docker-compose.yml
docs/: API.md  ARCHITECTURE.md  DEVELOPER_GUIDE.md  MODELS.md  PERFORMANCE.md
opencode-plugin/: README.md  index.js  package.json  test.js
sml_core/: .gitignore  Cargo.toml  Dockerfile  advanced_sml_eval.py  check_models.sh  fast_advanced_eval.py  llama_hook  quick_test.py  sml_efficiency_eval.py  test_all_models.py  test_ollama.py
sml_core/benches/: parser_benchmark.rs
sml_core/grammar/: gbnf.sml
sml_core/src/: executor.rs  http_server.rs  main.rs  ollama_client.rs  parser.rs  stress_tests.rs
sml_core/src/llm_bridge/: ffi.rs  gbnf.rs  ipc_bridge.rs  llama_minimal_hook.cpp  mod.rs
sml_core/src/tools/: custom_env.rs  generic_env.rs  mod.rs  opencode.rs  sandbox.rs
